* add arbitrary line cut function
* fix parsing of empty scans in spec files
* remove geth5_map function -> use geth5_scan instead
* support inf/nan values in spec files
* setup.py fixes for Debian packaging
* CIF export: make _atom_site_label unique
* change of SMaterial.density to a unit of kg/m3
* deprecate the fit_xrr function, which will be remove in the next major
  version -> use the new FitModel
* new FitModel class for fitting of instances of LayerModel
* fix bug in PowderDiffraction used with enable_simulation=False

v1.5.1, 2019-01-07

* simple unit cell visualization function: Crystal.show_unitcell()
* add new 'radius' and 'color' properties to Elements
* improve testing of various unit cell settings in CIFFile
* fix bug in handling negative data in kill_spike, thanks to reihel for
  reporting
* Panalytical XRDML: parse hkl from file if present
* CIF exporter and possibility to parse CIF files from string representations
* new reflectivity code based on transfer matrices (contributed by Numan
  Laanait, nlaanait@gmail.com)
* unittest and code quality updates
* show_reciprocal_space_plane function to plot a cut in reciprocal space
  together with the peak positionn of a given material
* new FourC experiment class, equivalent to HXRD, but using a four circle
  goniometer for consistent Q2Ang and Ang2Q functions
* add spline coefficients to PowderModel fits
* allow single Layer object as argument in LayerModel
* rewrite of line cut functions, shorter code, faster execution, more
  versatile
* avoid loops in Experiment.Q2Ang functions
* clean README and add new CONTRIBUTIONS instructions

v1.5.0, 2018-07-04

* improved docstring formating
* simulation code for diffuse X-ray reflectivity
* more flexibility in defining materials Wyckoff positions
* convenience function to calculate diffracted intensities of thin films to
  compare various Bragg peaks (coplanar diffraction geoemetry)
* simplify WyckoffBase of Alloy, by avoiding double entries